--- a/src/pack/CadastroHospede.form
+++ b/src/pack/CadastroHospede.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -31,12 +31,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" pref="759" max="32767" attributes="0"/>
+          <Component id="jPanel1" alignment="0" pref="765" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" pref="528" max="32767" attributes="0"/>
+          <Component id="jPanel1" alignment="0" pref="537" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -75,15 +75,15 @@
                       <Component id="jLabel4" min="-2" pref="100" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="txt_sobrenome" min="-2" pref="330" max="-2" attributes="0"/>
-                      <Component id="txt_nome" min="-2" pref="330" max="-2" attributes="0"/>
-                      <Component id="txt_idade" alignment="0" min="-2" pref="330" max="-2" attributes="0"/>
-                      <Component id="txt_cpf" alignment="0" min="-2" pref="330" max="-2" attributes="0"/>
-                      <Component id="combo_sexo" alignment="0" min="-2" pref="330" max="-2" attributes="0"/>
-                      <Component id="txt_cidade" alignment="0" min="-2" pref="330" max="-2" attributes="0"/>
-                      <Component id="txt_email" alignment="0" min="-2" pref="330" max="-2" attributes="0"/>
-                      <Component id="txt_tel" min="-2" pref="330" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="txt_sobrenome" pref="330" max="32767" attributes="0"/>
+                      <Component id="txt_nome" pref="330" max="32767" attributes="0"/>
+                      <Component id="txt_idade" alignment="0" pref="330" max="32767" attributes="0"/>
+                      <Component id="combo_sexo" alignment="0" pref="330" max="32767" attributes="0"/>
+                      <Component id="txt_cidade" alignment="0" pref="330" max="32767" attributes="0"/>
+                      <Component id="txt_email" alignment="0" pref="330" max="32767" attributes="0"/>
+                      <Component id="txt_tel" pref="330" max="32767" attributes="0"/>
+                      <Component id="txt_cpf" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -197,11 +197,6 @@
             <Property name="text" type="java.lang.String" value="CPF"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txt_cpf">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_cpfActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -310,6 +305,16 @@
             <Property name="text" type="java.lang.String" value="CADASTRAR H&#xd3;SPEDE"/>
             <Property name="opaque" type="boolean" value="true"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="txt_cpf">
+          <Properties>
+            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
+              <Format format="###.###.###-##" subtype="-1" type="5"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_cpfActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
