--- a/src/pack/Menu.form
+++ b/src/pack/Menu.form
@@ -7,7 +7,7 @@
       <Color blue="d" green="7d" red="4" type="rgb"/>
     </Property>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-      <Color id="Default Cursor"/>
+      <Color id="Cursor Padr&#xe3;o"/>
     </Property>
   </Properties>
   <SyntheticProperties>
